fixed layout issues with the meritTiles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -159,3 +159,7 @@ body {
 .rootNav {
     @apply flex px-[1.875rem] justify-between py-[1.5625rem] h-[5rem] mb-[10.9375rem]
 }
+
+.meritTile {
+    @apply flex w-[105rem] items-center even:flex-row-reverse relative justify-between mb-[4rem]
+}
